# hopfield_net

./: .gitignore  .travis.yml  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  README.md  _r_e_a_d_m_e_8md.html  annotated.html  appveyor.yml  class_hopfield_1_1_u_i-members.html  class_hopfield_1_1_u_i.html  class_hopfield_1_1hopfield-members.html  class_hopfield_1_1hopfield.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  h__network_8h.html  h__network_8h_source.html  index.html  menudata.js  namespace_hopfield.html  namespaces.html  new.txt  patterns.txt  patterns1.txt  spoiled.txt  spoiled1.txt  ui_8h.html  ui_8h_source.html
examples/: hopfield_netwotk.cpp
include/: h_network.h  ui.h
search/: all_1.js  all_3.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js
sources/: h_network.cpp  ui.cpp
tests/: main.cpp  test1.cpp
